# DocumentChat

./: .gitignore  .replit  DEPENDENCIES.md  DocumentChatApp_Presentation_updated_Design.pptx  DocumentChatApp_Presentation_with_Diagram.pptx  IMPROVEMENTS_SUMMARY.md  PROJECT_DOCUMENTATION.md  README.md  app.py  backend.py  backend_unique.py  backend_utils_consolidated.py  configuration.py  documentchat_backend.py  documentchat_backend_optimized.py  documentchat_frontend.py  documentchat_frontend_optimized.py  frontend.py  frontend_unique.py  pyproject.toml  rag_backend.py  rag_backend_old.py  rag_backend_overview.md  replit.md  requirements.txt  start_backend.py  start_services.sh  storage.py  storage_module.py  test_document.txt  vector_store.py
.streamlit/: config.toml
api/: routes.py
attached_assets/: Pasted--RAG-Application-Complete-Implementation-Prompt-Project-Overview-Build-a-production-ready-Ret-1760678270576_1760678270577.txt
backend/: __init__.py  backend_structure.md  config.py  config_manager.py  document_processor.py  main.py  managers.py  metadata_manager.py  model_manager.py  models.py  ollama.py  routes.py  utils.py
frontend/: api_client.py  app.py  chat.py  config.py  conversation_service.py  document_modal.py  export_utils.py  frontend_readme.md  main_app.py  notifications.py  onboarding.py  persistence.py  session_state.py  sidebar.py  styles.py  styling.py  toast.py  utils.py
schemas/: query.py
services/: documents.py  llm.py  model_manager.py
stores/: json_store.py  vector_store.py
uploaded_documents/: .gitkeep
utils/: errors.py  (+4 more)
(+2 files in other folders)
