[project]
name = "langchain-ollama-rag-assistant"
version = "1.0.0"
description = "LangChain Ollama RAG Assistant - Production-ready RAG system with LangChain, Ollama local LLMs, and Streamlit UI"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.119.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "pydantic>=2.12.2",
    "pypdf>=6.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
