[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "numpy>=2.3.4",
    "pydantic>=2.12.2",
    "pymupdf>=1.26.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
